--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
 
 .form-container {
   width: 80%;
-  border: 2px solid black;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
@@ -24,6 +23,7 @@ label {
   width: 100%;
   margin-bottom: 10px;
   background-color: white;
+  margin: 0 auto;
 }
 
 #drop-down {
